Added alternate game mode for time practice
Add hoe laat is het? mode where spoken time
is given and clock time has to be given.

--- a/A1/tijd/index.html
+++ b/A1/tijd/index.html
@@ -12,7 +12,12 @@
       <p class="vragen">Hoe laat is het?</p>
       <p id="displayed-time">24.60</p>
       <p>
-        Het is <input id="antwoord">
+        <input type="checkbox" name="speelsoort" id="speelsoort"/>
+        <label for="">Speel met gesproken tijd</label>
+      </p>
+      <p>
+        Het is <input id="antwoord"><br/>
+        <span id="error"></span>
       </p>
       <p>
         <button type="button" id="check-answer">Check Answer</button>
