--- a/A1/tijd/index.html
+++ b/A1/tijd/index.html
@@ -10,7 +10,7 @@
   <div class="app">
     <div class="box">
       <p class="vragen">Hoe laat is het?</p>
-      <p id="displayed-time">24.60</p>
+      <p id="displayed-time" class="digits">24.60</p>
       <p>
         <input type="checkbox" name="speelsoort" id="speelsoort"/>
         <label for="">Speel met gesproken tijd</label>
